# pytest_proj_exercise_5

./: pyproject.toml
tests/: test_dicts.py
utils/: dicts.py
