[tool.poetry]
name = "pytest-proj-exerсise-5"
version = "0.1.0"
description = ""
authors = ["Alexey Grazhdankin <alex.alexxx56@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_proj_exerсise_5"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
